Update cats-mtl to 1.0.0

--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -3,11 +3,11 @@ description=A service template with a set of plugins
 organization=com.example
 name_normalized=$name;format="normalize"$
 
-scala_version=2.13.1
+scala_version=2.13.3
 http4s_version=maven(org.http4s, http4s-dsl_2.13, stable)
 cats_version=maven(org.typelevel, cats-core_2.13, stable)
-#cats_effect_version=maven(org.typelevel, cats-effect_2.13, stable)
-cats_effect_version=2.1.4
+cats_effect_version=maven(org.typelevel, cats-effect_2.13, stable)
+#cats_effect_version=2.2.0
 cats_mtl_version=maven(org.typelevel, cats-mtl-core_2.13, stable)
 cats_retry_version=maven(com.github.cb372, cats-retry-mtl_2.13, stable)
 monix_version=maven(io.monix, monix_2.13, stable)
@@ -16,7 +16,7 @@ circe_extras_version=maven(io.circe, circe-generic-extras_2.13, stable)
 circe_config_version=maven(io.circe, circe-config_2.13, stable)
 newtype_version=maven(io.estatico, newtype_2.13, stable)
 #scalaz_deriving_version=maven(org.scalaz, deriving-macro_2.13, stable)
-scalaz_deriving_version=2.0.0-M5
+scalaz_deriving_version=2.0.0-M6
 refined_version=maven(eu.timepit, refined_2.13, stable)
 magnolia_version=maven(com.propensive, magnolia_2.13, stable)
 sup_version=maven(com.kubukoz, sup-core_2.13, stable)
@@ -40,7 +40,8 @@ sbt_wartremover_version=maven(org.wartremover, sbt-wartremover, stable)
 sbt_tpolecat_version=maven(io.github.davidgregory084, sbt-tpolecat, stable)
 sbt_missinglink_version=maven(ch.epfl.scala, sbt-missinglink, stable)
 sbt_mdoc_version=maven(org.scalameta, sbt-mdoc, stable)
-sbt_integration_env_version=maven(io.github.irevive, sbt-integration-env, stable)
+#sbt_integration_env_version=maven(io.github.irevive, sbt-integration-env, stable)
+sbt_integration_env_version=0.1.0
 sbt_explicit_dependencies_version=0.2.13
 sbt_updates_version=0.5.1
 sbt_native_packager_version=1.7.2
