Update scalafmt to 2.7.5

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,10 +1,7 @@
-version = 2.7.0
+version = 2.7.5
 style = defaultWithAlign
 maxColumn = 130
-newlines.alwaysBeforeTopLevelStatements = true
-newlines.sometimesBeforeColonInMethodReturnType = false
-newlines.afterCurlyLambda = never
-align.openParenCallSite = false
+docstrings.blankFirstLine = true
 rewrite.rules = [SortImports, AvoidInfix, RedundantParens, RedundantBraces]
 rewrite.redundantBraces.stringInterpolation = true
 rewrite.neverInfix.excludeFilters = [
