--- a/src/main/g8/.scalafmt.conf
+++ b/src/main/g8/.scalafmt.conf
@@ -1,10 +1,7 @@
 version = $scalafmt_core_version$
 style = defaultWithAlign
 maxColumn = 130
-newlines.alwaysBeforeTopLevelStatements = true
-newlines.sometimesBeforeColonInMethodReturnType = false
-newlines.afterCurlyLambda = never
-align.openParenCallSite = false
+docstrings.blankFirstLine = true
 rewrite.rules = [SortImports, AvoidInfix, RedundantParens, RedundantBraces]
 rewrite.redundantBraces.stringInterpolation = true
 rewrite.neverInfix.excludeFilters = [
