--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -7,10 +7,10 @@ scala_version=2.13.3
 http4s_version=maven(org.http4s, http4s-dsl_2.13, stable)
 cats_version=maven(org.typelevel, cats-core_2.13, stable)
 cats_effect_version=maven(org.typelevel, cats-effect_2.13, stable)
-#cats_effect_version=2.2.0
-cats_mtl_version=maven(org.typelevel, cats-mtl-core_2.13, stable)
+cats_mtl_version=maven(org.typelevel, cats-mtl_2.13, stable)
 cats_retry_version=maven(com.github.cb372, cats-retry-mtl_2.13, stable)
-monix_version=maven(io.monix, monix_2.13, stable)
+#monix_version=maven(io.monix, monix_2.13, stable)
+monix_version=3.2.2
 circe_version=maven(io.circe, circe-core_2.13, stable)
 circe_extras_version=maven(io.circe, circe-generic-extras_2.13, stable)
 circe_config_version=maven(io.circe, circe-config_2.13, stable)
