--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,6 +38,6 @@ jobs:
         run: bash ./scripts/push-to-demo-repository.sh
 
       - name: Deploy coverage report
-      - uses: codecov/codecov-action@v1
+        uses: codecov/codecov-action@v1
         with:
           fail_ci_if_error: true
