--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,7 +34,7 @@ jobs:
         run: sbt g8Test
 
       - name: Push to demo repository
-        if: contains(github.ref, "master")
+        if: contains(github.ref, 'master')
         run: bash ./scripts/push-to-demo-repository.sh
 
       - name: Deploy coverage report
