--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,7 +38,9 @@ jobs:
 
       - name: Push to demo repository
         #if: contains(github.ref, 'master')
-        run: bash ./../../scripts/push-to-demo-repository.sh
+        run: |
+          pwd
+          bash ./../../scripts/push-to-demo-repository.sh
 
       - name: Deploy coverage report
         uses: codecov/codecov-action@v1
