--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,18 +34,13 @@ jobs:
         run: |
           sbt g8
           cd target/g8
-
+          sbt ci
 
       - name: Push to demo repository
         #if: contains(github.ref, 'master')
         env:
           GITHUB_COMMIT_MESSAGE: ${{ github.event.head_commit.message }}
-        run: |
-          pwd
-          ls
-          ls target/g8 || true
-          echo "$GITHUB_COMMIT_MESSAGE"
-          bash ./scripts/push-to-demo-repository.sh
+        run: bash ./scripts/push-to-demo-repository.sh
 
       - name: Deploy coverage report
         uses: codecov/codecov-action@v1
