--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,7 +39,7 @@ jobs:
           ls -lha target/scala-2.13
 
       - name: Push to demo repository
-        #if: contains(github.ref, 'master')
+        if: contains(github.ref, 'master')
         env:
           GITHUB_COMMIT_MESSAGE: ${{ github.event.head_commit.message }}
         run: bash ./scripts/push-to-demo-repository.sh
