--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,9 +2,13 @@ name: Build & Test
 
 on:
   pull_request:
-    branches: ['*']
+    branches:
+      - master
+      - develop
   push:
-    branches: ['*']
+    branches:
+      - master
+      - develop
 
 env:
   GH_TOKEN: ${{ secrets.GH_TOKEN }}
