--- a/src/main/g8/.github/workflows/build.yml
+++ b/src/main/g8/.github/workflows/build.yml
@@ -46,3 +46,5 @@ jobs:
         run: sbt docs/docusaurusPublishGhpages
         env:
           GIT_DEPLOY_KEY: ${{ secrets.GIT_DEPLOY_KEY }}
+          ORGANIZATION_NAME: ${{ secrets.ORGANIZATION_NAME }}
+          REPO_URL: ${{ secrets.REPO_URL }}
