resolve weaver version via maven plugin

--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -21,8 +21,7 @@ logback_version=maven(ch.qos.logback, logback-classic, stable)
 flyway_version=maven(org.flywaydb, flyway-core, stable)
 odin_version=maven(com.github.valskalla, odin-extras_3, stable)
 union_derivation_version=maven(io.github.irevive, union-derivation-core_3, stable)
-#weaver_test_version=maven(com.disneystreaming, weaver-cats_3, stable)
-weaver_test_version=0.7.7-provider
+weaver_test_version=maven(com.disneystreaming, weaver-cats_3, stable)
 scalafmt_core_version=maven(org.scalameta, scalafmt-core_2.13, stable)
 
 sbt_version=maven(org.scala-sbt, sbt, stable)
