use constant version of sbt_integration_env

--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -32,7 +32,8 @@ sbt_wartremover_version=maven(org.wartremover, sbt-wartremover, stable)
 sbt_tpolecat_version=maven(io.github.davidgregory084, sbt-tpolecat, stable)
 sbt_missinglink_version=maven(ch.epfl.scala, sbt-missinglink, stable)
 sbt_scalafix_version=maven(ch.epfl.scala, sbt-scalafix, stable)
-sbt_integration_env_version=maven(io.github.irevive, sbt-integration-env, stable)
+#sbt_integration_env_version=maven(io.github.irevive, sbt-integration-env, stable)
+sbt_integration_env_version=0.4.0
 sbt_explicit_dependencies_version=0.2.16
 sbt_updates_version=0.5.1
 sbt_native_packager_version=1.8.1
