--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -25,16 +25,21 @@ weaver_test_version=maven(com.disneystreaming, weaver-cats_3, stable)
 scalafmt_core_version=maven(org.scalameta, scalafmt-core_2.13, stable)
 
 sbt_version=maven(org.scala-sbt, sbt, stable)
-sbt_scoverage_version=maven(org.scoverage, sbt-scoverage, stable)
-sbt_scalafmt_version=maven(org.scalameta, sbt-scalafmt, stable)
-sbt_mdoc_version=maven(org.scalameta, sbt-mdoc, stable)
-sbt_wartremover_version=maven(org.wartremover, sbt-wartremover, stable)
-sbt_tpolecat_version=maven(io.github.davidgregory084, sbt-tpolecat, stable)
-sbt_missinglink_version=maven(ch.epfl.scala, sbt-missinglink, stable)
+#sbt_scoverage_version=maven(org.scoverage, sbt-scoverage, stable)
+#sbt_scalafmt_version=maven(org.scalameta, sbt-scalafmt, stable)
+sbt_scalafmt_version=2.4.3
+#sbt_mdoc_version=maven(org.scalameta, sbt-mdoc, stable)
+sbt_mdoc_version=2.2.23
+#sbt_wartremover_version=maven(org.wartremover, sbt-wartremover, stable)
+sbt_wartremover_version=2.4.16
+#sbt_tpolecat_version=maven(io.github.davidgregory084, sbt-tpolecat, stable)
+sbt_tpolecat_version=0.1.20
+#sbt_missinglink_version=maven(ch.epfl.scala, sbt-missinglink, stable)
+sbt_missinglink_version=0.3.2
 #sbt_scalafix_version=maven(ch.epfl.scala, sbt-scalafix, stable)
 sbt_scalafix_version=0.9.31
 #sbt_integration_env_version=maven(io.github.irevive, sbt-integration-env, stable)
 sbt_integration_env_version=0.4.0
 sbt_explicit_dependencies_version=0.2.16
 sbt_updates_version=0.5.1
-sbt_native_packager_version=1.8.1
+sbt_native_packager_version=1.9.6
