use const versions of sbt plugins

--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -22,7 +22,8 @@ flyway_version=maven(org.flywaydb, flyway-core, stable)
 odin_version=maven(com.github.valskalla, odin-extras_3, stable)
 union_derivation_version=maven(io.github.irevive, union-derivation-core_3, stable)
 weaver_test_version=maven(com.disneystreaming, weaver-cats_3, stable)
-scalafmt_core_version=maven(org.scalameta, scalafmt-core_2.13, stable)
+#scalafmt_core_version=maven(org.scalameta, scalafmt-core_2.13, stable)
+scalafmt_core_version=3.0.6
 
 sbt_version=maven(org.scala-sbt, sbt, stable)
 #sbt_scoverage_version=maven(org.scoverage, sbt-scoverage, stable)
