use const versions of sbt plugins

--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -25,7 +25,8 @@ weaver_test_version=maven(com.disneystreaming, weaver-cats_3, stable)
 #scalafmt_core_version=maven(org.scalameta, scalafmt-core_2.13, stable)
 scalafmt_core_version=3.0.6
 
-sbt_version=maven(org.scala-sbt, sbt, stable)
+#sbt_version=maven(org.scala-sbt, sbt, stable)
+sbt_version=1.5.5
 #sbt_scoverage_version=maven(org.scoverage, sbt-scoverage, stable)
 #sbt_scalafmt_version=maven(org.scalameta, sbt-scalafmt, stable)
 sbt_scalafmt_version=2.4.3
