provide static version of dependencies

--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -4,44 +4,63 @@ organization=com.example
 name_normalized=$name;format="normalize"$
 
 scala_version=3.1.0
-http4s_version=maven(org.http4s, http4s-dsl_3, stable)
-cats_version=maven(org.typelevel, cats-core_3, stable)
-cats_effect_version=maven(org.typelevel, cats-effect_3, stable)
-cats_mtl_version=maven(org.typelevel, cats-mtl_3, stable)
-cats_retry_version=maven(com.github.cb372, cats-retry-mtl_3, stable)
-circe_version=maven(io.circe, circe-core_3, stable)
-newtype_version=maven(io.monix, newtypes-core_3, stable)
-refined_version=maven(eu.timepit, refined_3, stable)
-#sup_version=maven(com.kubukoz, sup-core_3, stable)
+http4s_version=0.23.6
+cats_version=2.6.1
+cats_effect_version=3.2.9
+cats_mtl_version=1.2.1
+cats_retry_version=3.1.0
+circe_version=0.14.1
+newtype_version=0.0.1
+refined_version=0.9.27
 sup_version=0.9.0-M6
-#doobie_version=maven(org.tpolecat, doobie-core_3, stable)
 doobie_version=1.0.0-RC1
-pureconfig_version=maven(com.github.pureconfig, pureconfig-core_3, stable)
-logback_version=maven(ch.qos.logback, logback-classic, stable)
-flyway_version=maven(org.flywaydb, flyway-core, stable)
-odin_version=maven(com.github.valskalla, odin-extras_3, stable)
-union_derivation_version=maven(io.github.irevive, union-derivation-core_3, stable)
-weaver_test_version=maven(com.disneystreaming, weaver-cats_3, stable)
-#scalafmt_core_version=maven(org.scalameta, scalafmt-core_2.13, stable)
+pureconfig_version=0.17.0
+logback_version=1.2.6
+flyway_version=8.0.3
+odin_version=0.13.0
+union_derivation_version=0.0.2
+weaver_test_version=0.7.7
 scalafmt_core_version=3.0.6
+organize-imports-version=0.6.0
 
-#sbt_version=maven(org.scala-sbt, sbt, stable)
 sbt_version=1.5.5
-#sbt_scoverage_version=maven(org.scoverage, sbt-scoverage, stable)
-#sbt_scalafmt_version=maven(org.scalameta, sbt-scalafmt, stable)
 sbt_scalafmt_version=2.4.3
-#sbt_mdoc_version=maven(org.scalameta, sbt-mdoc, stable)
 sbt_mdoc_version=2.2.23
-#sbt_wartremover_version=maven(org.wartremover, sbt-wartremover, stable)
 sbt_wartremover_version=2.4.16
-#sbt_tpolecat_version=maven(io.github.davidgregory084, sbt-tpolecat, stable)
 sbt_tpolecat_version=0.1.20
-#sbt_missinglink_version=maven(ch.epfl.scala, sbt-missinglink, stable)
 sbt_missinglink_version=0.3.2
-#sbt_scalafix_version=maven(ch.epfl.scala, sbt-scalafix, stable)
 sbt_scalafix_version=0.9.31
-#sbt_integration_env_version=maven(io.github.irevive, sbt-integration-env, stable)
 sbt_integration_env_version=0.4.0
 sbt_explicit_dependencies_version=0.2.16
 sbt_updates_version=0.5.1
 sbt_native_packager_version=1.9.6
+
+#scala_version=maven(org.scala-lang, scala-compiler, stable)
+#http4s_version=maven(org.http4s, http4s-dsl_3, stable)
+#cats_version=maven(org.typelevel, cats-core_3, stable)
+#cats_effect_version=maven(org.typelevel, cats-effect_3, stable)
+#cats_mtl_version=maven(org.typelevel, cats-mtl_3, stable)
+#cats_retry_version=maven(com.github.cb372, cats-retry-mtl_3, stable)
+#circe_version=maven(io.circe, circe-core_3, stable)
+#newtype_version=maven(io.monix, newtypes-core_3, stable)
+#refined_version=maven(eu.timepit, refined_3, stable)
+##sup_version=maven(com.kubukoz, sup-core_3, stable)
+#doobie_version=maven(org.tpolecat, doobie-core_3, stable)
+#pureconfig_version=maven(com.github.pureconfig, pureconfig-core_3, stable)
+#logback_version=maven(ch.qos.logback, logback-classic, stable)
+#flyway_version=maven(org.flywaydb, flyway-core, stable)
+#odin_version=maven(com.github.valskalla, odin-extras_3, stable)
+#union_derivation_version=maven(io.github.irevive, union-derivation-core_3, stable)
+#weaver_test_version=maven(com.disneystreaming, weaver-cats_3, stable)
+#scalafmt_core_version=maven(org.scalameta, scalafmt-core_2.13, stable)
+
+#sbt_version=maven(org.scala-sbt, sbt, stable)
+#sbt_scoverage_version=maven(org.scoverage, sbt-scoverage, stable)
+#sbt_scalafmt_version=maven(org.scalameta, sbt-scalafmt, stable)
+#sbt_mdoc_version=maven(org.scalameta, sbt-mdoc, stable)
+#sbt_wartremover_version=maven(org.wartremover, sbt-wartremover, stable)
+#sbt_tpolecat_version=maven(io.github.davidgregory084, sbt-tpolecat, stable)
+#sbt_missinglink_version=maven(ch.epfl.scala, sbt-missinglink, stable)
+#sbt_scalafix_version=maven(ch.epfl.scala, sbt-scalafix, stable)
+#sbt_integration_env_version=maven(io.github.irevive, sbt-integration-env, stable)
+
