update scalfmt config

--- a/src/main/g8/.scalafmt.conf
+++ b/src/main/g8/.scalafmt.conf
@@ -1,15 +1,25 @@
 version = $scalafmt_core_version$
-style = defaultWithAlign
-runner.dialect = scala3
+align.preset = more
+runner.dialect = Scala3
 maxColumn = 130
+
 docstrings.blankFirstLine = true
+docstrings.oneline = keep
+docstrings.wrap = no
+
 binPack.parentConstructors = Oneline
+
 rewrite.rules = [Imports, AvoidInfix, RedundantParens, RedundantBraces]
 rewrite.redundantBraces.stringInterpolation = true
 rewrite.imports.sort = ascii
+
+rewrite.neverInfix.excludeFilters = [cross, and]
+
+literals.hexDigits = Upper
+
 align.tokens."+" = [
-  { code = ":=", owner = "Infix" },
-  { code = "+=", owner = "Infix" },
+  { code = ":=", owner = "Infix" }
+  { code = "+=", owner = "Infix" }
   { code = "++=", owner = "Infix" }
   { code = "-=", owner = "Infix" }
 ]
