--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,42 +1,24 @@
-version = 2.7.5
-style = defaultWithAlign
+version = 3.0.8
+align.preset = more
 maxColumn = 130
+
 docstrings.blankFirstLine = true
-rewrite.rules = [SortImports, AvoidInfix, RedundantParens, RedundantBraces]
+docstrings.oneline = keep
+docstrings.wrap = no
+
+binPack.parentConstructors = Oneline
+
+rewrite.rules = [Imports, AvoidInfix, RedundantParens, RedundantBraces]
 rewrite.redundantBraces.stringInterpolation = true
-rewrite.neverInfix.excludeFilters = [
-  cross
-  until
-  to
-  by
-  eq
-  ne
-  "should.*"
-  "contain.*"
-  "must.*"
-  in
-  ignore
-  be
-  taggedAs
-  thrownBy
-  synchronized
-  have
-  when
-  size
-  like
-  only
-  noneOf
-  oneElementOf
-  noElementsOf
-  atLeastOneElementOf
-  atMostOneElementOf
-  allElementsOf
-  inOrderElementsOf
-  theSameElementsAs
-]
-align.tokens.add = [
-  { code = ":=", owner = "Infix" },
-  { code = "+=", owner = "Infix" },
+rewrite.imports.sort = ascii
+
+rewrite.neverInfix.excludeFilters = [cross, and]
+
+literals.hexDigits = Upper
+
+align.tokens."+" = [
+  { code = ":=", owner = "Infix" }
+  { code = "+=", owner = "Infix" }
   { code = "++=", owner = "Infix" }
   { code = "-=", owner = "Infix" }
 ]
